--- a/css/style.css
+++ b/css/style.css
@@ -50,10 +50,11 @@ body{
     text-decoration: none;
     padding: 12px;
     margin: 0 12px;
+    transition: 0.2s;
 }
 
 .header-list-item a:hover{
-    border-bottom: 3px solid #000;
+    border-bottom: 2px solid #000;
 }
 
 .header-search{
@@ -90,18 +91,8 @@ body{
     margin-left: 24px;
 }
 
-/* Fim do Menu Desktop */
+/* Fim do Menu superior */
 
-.anime {
-	opacity: 0;
-	transform: translate3D(-50px, 0px, 0px);
-}
-
-.anime-init {
-	opacity: 1;
-	transform: translate3D(0px, 0px, 0px);
-	transition: .3s all ease;
-}
 
 /* first section */
 
@@ -186,7 +177,6 @@ body{
     flex-direction: column;
     background: #F3F3F3;
     border-radius: 8px;
-    /* box-shadow: 10px 10px 30px 3px rgba(44, 44, 44, 0.25), -10px -10px 30px 3px rgba(0, 0, 0, 0.5); */
 }
 
 .vitrine-title{
@@ -196,6 +186,7 @@ body{
     font-size: 40px;
     line-height: 48px;
     text-align: center;
+
 }
 
 .vitrine-list{
@@ -205,6 +196,45 @@ body{
 
     margin: 60px 0 32px 0;
 }
+
+li.vitrine-list-item{
+    width:32px;
+    height:32px;
+    margin: 5px;
+    border-radius: 50%;
+    cursor: pointer;
+
+
+}
+.color{
+    border: 2px solid #ffffff;
+}
+
+.selected{
+    border: 2px solid #1a1a1a80;
+    opacity: 1 !important;
+}
+
+li.vitrine-list-item.color-white{ 
+    background: linear-gradient(270.06deg, #E4E4E4 20.97%, #FFFFFF 99.92%);
+    opacity: 0.5;
+    
+}
+li.vitrine-list-item.color-natural{ 
+    background: linear-gradient(277.74deg, #FFE08D 9.16%, #FFB757 91.03%);
+    opacity: 0.5;
+    
+}
+li.vitrine-list-item.color-p_b{ 
+    background: linear-gradient(270.06deg, #464646 20.97%, #D3D3D3 99.92%);
+    opacity: 0.5;
+    
+}
+li.vitrine-list-item.color-black{
+    background: linear-gradient(270.06deg, #232323 20.97%, #000000 99.92%);
+    opacity: 0.5; 
+}
+
 
 .vitrine-image{
     width: 464px;
@@ -366,12 +396,22 @@ body{
 .contact-container{
     width: 1350px;
     max-width: calc(100% - 72px);
-    margin: 150px auto;
+    margin: 120px auto;
     display: flex;
 
     justify-content: center;
 
 }
+
+@media only screen and (max-width: 1100px) {
+    .contact-container {
+      flex-direction: column;
+      align-items: center;
+    }
+    .box{
+        margin-top: 40px;
+    }
+  }
 
 .form-contact__img img{
     max-width: 600px;
@@ -400,7 +440,7 @@ body{
     font-size: 2.5em;
     line-height: 2.5em;
     font-weight: 700;
-    color: 1F1F1F;
+    color: #1F1F1F;
 }
 
 .box [type="text"], [type="email"]{
@@ -411,7 +451,7 @@ body{
 
 .box [type="text"], [type="email"]{
     height: 76px;
-    outline: none;
+    outline-color: #F3F3F3;
     border: none;
     border-radius: 12px;
 }
@@ -419,7 +459,7 @@ body{
 .box textarea {
     font-family: 'Lato', sans-serif;
 
-    outline: none;
+    outline-color: #F3F3F3;
     border: none;
     resize: none;
     padding: 20px;
@@ -440,7 +480,6 @@ body{
     align-self: center;
     font-size: 1.25em;
 }
-
 
 .box input[type='checkbox'] {
     position: relative;
@@ -484,6 +523,8 @@ body{
 
 .box button{
     height: 84px;
+    width: 517px;
+    padding: 20px;
     font-size: 20px;
     font-weight: 700;
     border: 2px solid #000000;
@@ -491,6 +532,8 @@ body{
     background: none;
     transition: 0.2s;
     cursor: pointer;
+    font-family: Lato, sans-serif;
+    outline-color: #000000;
     
 }
 
@@ -549,9 +592,15 @@ body{
 
 .footer-corpyright{
     text-transform: uppercase;
+    font-size: 20px;
     padding: 20px 0;
     text-align: center;
-    background: #dbdbdb;
+    background: #F2F2F2;;
+}
+
+.footer-corpyright a{
+    text-transform: uppercase;
+    font-size: 20px;
 }
 
 .footer-corpyright a:hover{
